Got unit tests working

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
     <groupId>net.willgoodman</groupId>
     <artifactId>wordprediction</artifactId>
     <version>1</version>
+    <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
